--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -4,51 +4,17 @@ html, body {
     height: 100%;
 }
 body {
-    background: #fff;
+    background:#252836;
     padding: 0;
     margin: 0;
     font-family: 'Varela Round', sans-serif;
 }
-.header {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    max-width: 100%;
-    box-shadow: none;
-    background-color: #292245;
-    position: fixed;
-    height: 60px!important;
-    overflow: hidden;
-    z-index: 10;
-}
-.main {
-    margin: 0 auto;
-    display: block;
-    height: 100%;
-    margin-top: 60px;
-}
-.mainInner{
-    display: table;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-}
-.mainInner div{
-    display:table-cell;
-    vertical-align: middle;
-    font-size: 3em;
-    font-weight: bold;
-    letter-spacing: 1.25px;
-}
+
 #sidebarMenu {
     height: 100%;
-    position: fixed;
     left: 0;
-    width: 320px;
-    margin-top: 60px;
-    transform: translateX(-260px);
-    transition: transform 250ms ease-in-out;
-    background: linear-gradient(180deg, #292245 20%, #0126f8 100%);
+    width: 70px;
+    background:#1F1D2B;
 }
 .sidebarMenuInner{
     margin:0;
@@ -57,25 +23,19 @@ body {
 }
 .sidebarMenuInner li{
     list-style: none;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
     padding: 20px;
     cursor: pointer;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.10);
 }
-.sidebarMenuInner li span{
-    display: block;
-    font-size: 14px;
-    color: rgba(255, 255, 255, 0.50);
-}
+
 .sidebarMenuInner li a{
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
     cursor: pointer;
     text-decoration: none;
 }
+
+#icon:hover {
+    background-color: wheat
+}
+
 input[type="checkbox"]:checked ~ #sidebarMenu {
     transform: translateX(0);
 
@@ -89,61 +49,8 @@ input[type=checkbox] {
     box-sizing: border-box;
     display: none;
 }
-.sidebarIconToggle {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    cursor: pointer;
-    position: absolute;
-    z-index: 99;
-    height: 100%;
-    width: 100%;
-    top: 22px;
-    left: 15px;
-    height: 22px;
-    width: 22px;
-}
-.spinner {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    position: absolute;
-    height: 3px;
-    width: 100%;
-    background-color: #fff;
-}
-.horizontal {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    position: relative;
-    float: left;
-    margin-top: 3px;
-}
-.diagonal.part-1 {
-    position: relative;
-    transition: all 0.3s;
-    box-sizing: border-box;
-    float: left;
-}
-.diagonal.part-2 {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    position: relative;
-    float: left;
-    margin-top: 3px;
-}
-input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    opacity: 0;
-}
-input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    transform: rotate(135deg);
-    margin-top: 8px;
-}
-input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    transform: rotate(-135deg);
-    margin-top: -9px;
+
+
+.main.box {
+    background-color: #1F1D2B;
 }
