--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -11,6 +11,7 @@ body {
 }
 
 #sidebarMenu {
+    position: fixed;
     height: 100%;
     left: 0;
     width: 70px;
@@ -50,7 +51,11 @@ input[type=checkbox] {
     display: none;
 }
 
-
 .main.box {
     background-color: #1F1D2B;
+}
+
+.active_Button {
+    color: rgb(247, 149, 12);
+    
 }
